--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -38,6 +38,7 @@
 
 
 .detail{
+  font-size: 1.4rem;
   display: flex;
   padding: 4.5rem;
   background-color: var(--color-grey-light);
@@ -45,7 +46,6 @@
 }
 
 .description{
-  font-size: 1.4rem;
   background-color: rgb(255, 255, 255);
   flex: 0 0 60%;
   margin-right: 4.5rem;
@@ -54,6 +54,10 @@
 }
 
 .user-reviews{
-  background-color: green;
   flex: 1;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 }
