--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -5,10 +5,16 @@
   box-shadow: var(--shadow-dark);
 
   min-height: 50rem;
+
+  @media only screen and (max-width: $bp-largest) {
+    margin: 0;
+    max-width: 100%;
+    width: 100%;
+  }
 }
 
 .header {
-    font-size: 1.4rem;
+  font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
   border-bottom: var(--line);
@@ -16,10 +22,20 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @media only screen and (max-width: $bp-large){
+   flex-wrap: wrap;
+   height: 12rem;
+   align-content: space-around;
+  }
 }
 
 .content {
   display: flex;
+
+  @media only screen and (max-width: $bp-md) {
+    flex-direction: column;
+  }
 }
 
 .sidebar {
@@ -36,28 +52,44 @@
   background-color: white;
 }
 
-
-.detail{
+.detail {
   font-size: 1.4rem;
   display: flex;
   padding: 4.5rem;
   background-color: var(--color-grey-light);
   border-bottom: var(--line);
+
+  @media only screen and (max-width: $bp-md) {
+    padding: 3rem;
+  }
+
+  @media only screen and (max-width: $bp-sm) {
+    flex-direction: column;
+  }
 }
 
-.description{
+.description {
   background-color: rgb(255, 255, 255);
   flex: 0 0 60%;
   margin-right: 4.5rem;
   padding: 3rem;
   box-shadow: var(--shadow-light);
+
+  @media only screen and (max-width: $bp-md) {
+    padding: 2rem;
+    margin-right: 3rem;
+  }
+
+  @media only screen and (max-width: $bp-sm) {
+    margin-right: 0;
+    margin-bottom: 3rem;
+  }
 }
 
-.user-reviews{
+.user-reviews {
   flex: 1;
 
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
