--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -37,6 +37,12 @@ Grey dark 3: #999
   
 }
 
+$bp-largest: 75em; //1200px
+$bp-large: 68.5em; //1100px
+$bp-md: 56.25em; //900px
+$bp-sm: 37.5em; //600px
+$bp-xsm: 31.25em; //500px
+
 // GLOBAL RESET
 * {
   margin: 0;
@@ -52,6 +58,10 @@ Grey dark 3: #999
 html {
   box-sizing: border-box;
   font-size: 62.5%; // 1rem = 10px, 10px/16px = 62.5%
+
+  @media only screen and (max-width: $bp-large){
+    font-size: 50%;
+  }
 }
 
 body {
