--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -15,6 +15,11 @@
   align-items: center;
   justify-content: center;
 
+  @media only screen and (max-width: $bp-large) {
+    order: 1;
+    flex: 0 0 100%;
+  }
+
   &__input {
     font-family: inherit;
     font-size: inherit;
@@ -124,11 +129,20 @@
   list-style: none;
   margin-top: 3.5rem;
 
+  @media only screen and (max-width: $bp-md) {
+    display: flex;
+    margin: 0;
+  }
+
   &__item {
     position: relative;
 
     &:not(:last-child) {
       margin-bottom: 0.5rem;
+    }
+
+    @media only screen and (max-width: $bp-md) {
+      flex: 1;
     }
   }
 
@@ -166,6 +180,16 @@
 
     display: flex;
     align-items: center;
+
+    @media only screen and (max-width: $bp-md) {
+      justify-content: center;
+      padding: 2rem;
+    }
+
+    @media only screen and (max-width: $bp-sm) {
+      flex-direction: column;
+      padding: 1.5rem 0.5rem;
+    }
   }
 
   &__icon {
@@ -173,6 +197,13 @@
     width: 1.75rem;
     margin-right: 2rem;
     fill: currentColor;
+
+    @media only screen and (max-width: $bp-sm) {
+      margin: 0;
+      margin-bottom: 0.7rem;
+      width: 1.5rem;
+      height: 1.5rem;
+    }
   }
 }
 
@@ -184,6 +215,10 @@
   text-align: center;
   padding: 2.5rem;
   color: var(--color-grey-light-4);
+
+  @media only screen and (max-width: $bp-md) {
+    display: none;
+  }
 }
 
 ///////////////////////////////////
@@ -212,6 +247,11 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     padding: 1.5rem 3rem;
+
+    @media only screen and (max-width: $bp-sm) {
+      font-size: 1.8rem;
+      padding: 1.25rem 2rem;
+    }
   }
 
   &__stars {
@@ -246,16 +286,29 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    justify-content: center;
+
+    @media only screen and (max-width: $bp-sm) {
+      padding: 0 1.5rem;
+    }
   }
 
   &__rating-average {
     font-size: 2.25rem;
     font-weight: 300;
+
+    @media only screen and (max-width: $bp-sm) {
+      font-size: 1.8rem;
+    }
   }
 
   &__rating-count {
     font-size: 0.8rem;
     text-transform: uppercase;
+
+    @media only screen and (max-width: $bp-sm) {
+      font-size: 0.5rem;
+    }
   }
 }
 
@@ -362,6 +415,7 @@
   }
 
   &__friends {
+    display: flex;
   }
 
   &__photo {
@@ -386,6 +440,12 @@
   padding: 3rem;
   margin-bottom: 3.5rem;
   position: relative;
+  overflow: hidden;
+
+  @media only screen and (max-width: $bp-md) {
+    padding: 2rem;
+    margin-bottom: 3rem;
+  }
 
   &__text {
     margin-bottom: 2rem;
@@ -444,6 +504,10 @@
 .cta {
   padding: 3.5rem 0;
   text-align: center;
+
+  @media only screen and (max-width: $bp-md) {
+    padding: 2.5rem 0;
+  }
 
   &__book-now {
     font-size: 2rem;
